src/test/resources/amyc/typer/failing/ErrorError.grading.amy
object ErrorError
  error(1)
end ErrorError
